allprojects {
    apply plugin: 'java'
    apply plugin: 'signing'
    apply plugin: 'maven-publish'

    group = "${projectGroup}"
    version = "${projectVersion}"

    repositories {
        mavenCentral()
    }

    java {

    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(22)
        }

        sourceCompatibility = '22'
        targetCompatibility = '22'
    }

    apply from: "${rootProject.projectDir}/dependencies.gradle"
    apply from: "${rootProject.projectDir}/docs.gradle"
    apply from: "${rootProject.projectDir}/publishing.gradle"
    apply from: "${rootProject.projectDir}/jar.gradle"

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-Xlint:all'
        options.compilerArgs << '--enable-preview'
    }

    test {
        useJUnitPlatform()
    }


}














